--- a/battle.html
+++ b/battle.html
@@ -1268,7 +1268,7 @@ html,body{height:100%;margin:0;font-family:'Press Start 2P','DotGothic16',monosp
     src: "images/cards/horny toad card format.jpg", 
     name: "Horny Toad",
     hp: 80,
-    mobile: false,
+    mobile: true,
     attacks: [
       { 
         name: "Piercing Strike", 
@@ -1309,7 +1309,7 @@ html,body{height:100%;margin:0;font-family:'Press Start 2P','DotGothic16',monosp
     src: "images/cards/sumo toad card format.jpg", 
     name: "Sumo Toad",
     hp: 100,
-    mobile: false,
+    mobile: true,
     attacks: [
       { 
         name: "Oshidashi", 
