--- a/battle.html
+++ b/battle.html
@@ -4587,6 +4587,65 @@ text-shadow: 0 0 20px rgba(255, 68, 68, 0.7);
     font-size: 32px !important;
   }
 }
+@media (min-width: 769px) and (max-width: 1200px) {
+  .wrap {
+    padding: 18px !important;
+    min-height: 100vh !important;
+  }
+  .game-container {
+    flex-direction: column !important;
+    height: auto !important;
+    gap: 18px !important;
+  }
+  .arena {
+    padding: 18px !important;
+    gap: 18px !important;
+    border-radius: 16px !important;
+  }
+  .area {
+    flex-direction: row !important;
+    gap: 12px !important;
+    padding: 14px !important;
+    min-height: 180px !important;
+  }
+  .player-info, .hp-bar {
+    min-width: 150px !important;
+    width: 150px !important;
+    height: 22px !important;
+    font-size: 13px !important;
+  }
+  .slots {
+    gap: 12px !important;
+  }
+  .slot {
+    width: 90px !important;
+    height: 130px !important;
+  }
+  .slot .card {
+    width: 85px !important;
+    height: 120px !important;
+  }
+  .hand {
+    min-height: 100px !important;
+    gap: 10px !important;
+  }
+  .btn {
+    padding: 14px 22px !important;
+    font-size: 13px !important;
+  }
+  .log, .discard-pile {
+    position: relative !important;
+    width: 90% !important;
+    max-width: 400px !important;
+    margin: 0 auto 18px auto !important;
+    height: 180px !important;
+    font-size: 13px !important;
+  }
+  .turn-indicator {
+    font-size: 16px !important;
+    padding: 10px 18px !important;
+  }
+}
 </style>
 </body>
 </html>
