--- a/battle.html
+++ b/battle.html
@@ -4588,139 +4588,7 @@ text-shadow: 0 0 20px rgba(255, 68, 68, 0.7);
   }
 }
 @media (min-width: 769px) and (max-width: 1200px) {
-  /* Bottom panel sits fixed at the bottom, log + graveyard side by side */
-  .bottom-panel {
-    display: flex !important;
-    flex-direction: row !important;
-    position: fixed !important;
-    bottom: 0 !important;
-    left: 0 !important;
-    width: 100% !important;
-    height: 160px !important;
-    z-index: 999 !important;
-    background: rgba(0,0,0,0.92);
-  }
-  .bottom-panel .log,
-  .bottom-panel .discard-pile {
-    position: relative !important;
-    top: auto !important;
-    bottom: auto !important;
-    left: auto !important;
-    right: auto !important;
-    flex: 1 1 0;
-    width: 50% !important;
-    height: 100% !important;
-    margin: 0 !important;
-    max-width: none !important;
-    font-size: 15px !important;
-    overflow-y: auto !important;
-  }
-  .bottom-panel .log {
-    border-right: 2px solid #444;
-    color: #eee;
-    background: rgba(0,0,0,0.8);
-    line-height: 1.3;
-    white-space: normal;
-    word-break: break-word;
-  }
-  .bottom-panel .discard-pile {
-    border-left: 2px solid #ff4444;
-    background: rgba(0,0,0,0.9);
-    display: flex;
-    flex-wrap: wrap;
-    align-content: flex-start;
-    justify-content: flex-start;
-    gap: 6px;
-  }
-  .bottom-panel .discard-pile .mini-card {
-    width: 28px !important;
-    height: 40px !important;
-    flex: 0 0 auto;
-  }
-  .wrap {
-    padding-bottom: 180px !important;
-    min-height: 100vh !important;
-  }
-  .game-container {
-    display: block !important;
-    height: auto !important;
-    width: 100% !important;
-    max-width: none !important;
-  }
-  .arena {
-    background: none !important;
-    border: none !important;
-    padding: 12px !important;
-    gap: 12px !important;
-    flex: none !important;
-  }
-  .area {
-    flex-direction: column !important;
-    gap: 10px !important;
-    padding: 10px !important;
-    min-height: 160px !important;
-  }
-  .player-info, .hp-bar {
-    min-width: 120px !important;
-    width: 120px !important;
-    height: 18px !important;
-    font-size: 12px !important;
-  }
-  .slots {
-    flex-wrap: nowrap !important;
-    justify-content: space-between !important;
-    width: 100% !important;
-    overflow-x: auto !important;
-    gap: 8px !important;
-    padding: 0 2px !important;
-  }
-  .slot {
-    width: 70px !important;
-    min-width: 70px !important;
-    height: 105px !important;
-    margin: 0 !important;
-    padding-bottom: 16px !important;
-  }
-  .slot .card {
-    width: 65px !important;
-    height: 92px !important;
-  }
-  .hand {
-    min-height: 80px !important;
-    gap: 8px !important;
-    flex-wrap: nowrap !important;
-    justify-content: center !important;
-    overflow-x: auto !important;
-    width: 100% !important;
-    position: relative !important;
-    z-index: 10 !important;
-  }
-  .hand .card {
-    width: 60px !important;
-    height: 85px !important;
-    margin: 0 2px !important;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.18);
-    transition: all 0.3s ease !important;
-  }
-  .hand .card.selected {
-    width: 75px !important;
-    height: 105px !important;
-    z-index: 200 !important;
-  }
-  .btn {
-    padding: 10px 16px !important;
-    font-size: 12px !important;
-  }
-  .turn-panel {
-    bottom: 170px !important;
-    gap: 10px !important;
-    z-index: 999 !important;
-  }
-  .turn-indicator {
-    top: 14px !important;
-    font-size: 13px !important;
-    padding: 8px 14px !important;
-  }
+  /* 1. Action panel and buttons */
   .card-action-panel {
     width: 85% !important;
     max-width: 250px !important;
@@ -4728,6 +4596,10 @@ text-shadow: 0 0 20px rgba(255, 68, 68, 0.7);
     left: 50% !important;
     transform: translateX(-50%) !important;
     box-sizing: border-box !important;
+    position: fixed !important;
+    bottom: 170px !important;
+    top: auto !important;
+    right: auto !important;
   }
   .card-action-panel .btn {
     white-space: normal !important;
@@ -4738,31 +4610,38 @@ text-shadow: 0 0 20px rgba(255, 68, 68, 0.7);
     width: 100% !important;
     overflow: hidden !important;
     text-overflow: ellipsis !important;
+    margin: 2px 0 !important;
+    box-sizing: border-box !important;
   }
-  .card-action-panel .btn.cooldown::after {
-    right: -3px !important;
-    top: -10px !important;
-    font-size: 7px !important;
-    padding: 1px 3px !important;
-  }
-  .status-icon {
-    width: 18px !important;
-    height: 18px !important;
-    font-size: 11px !important;
-    top: -14px !important;
-    z-index: 1000 !important;
-  }
-  .slot, .area {
+
+  /* 2. Hand: no scrollbars, wrap if needed */
+  .hand {
     overflow: visible !important;
-    z-index: 1 !important;
+    flex-wrap: wrap !important;
+    justify-content: center !important;
+    min-height: 80px !important;
+    gap: 8px !important;
+    width: 100% !important;
+    height: auto !important;
+  }
+  .hand .card {
+    width: 60px !important;
+    height: 85px !important;
+    margin: 0 2px !important;
+  }
+
+  /* 3. Containers closer together */
+  .wrap {
+    padding: 6px !important;
   }
   .arena {
-    overflow: visible !important;
+    gap: 6px !important;
+    padding: 6px !important;
   }
-  .game-over-text {
-    font-size: 40px !important;
-    padding: 0 20px !important;
-    word-break: break-word !important;
+  .area {
+    gap: 6px !important;
+    padding: 6px !important;
+    min-height: 120px !important;
   }
 }
 </style>
