--- a/battle.html
+++ b/battle.html
@@ -4588,7 +4588,129 @@ text-shadow: 0 0 20px rgba(255, 68, 68, 0.7);
   }
 }
 @media (min-width: 769px) and (max-width: 1200px) {
-  /* 1. Action panel and buttons */
+  /* Bottom panel: fixed at bottom, log + graveyard side by side */
+  .bottom-panel {
+    display: flex !important;
+    flex-direction: row !important;
+    position: fixed !important;
+    bottom: 0 !important;
+    left: 0 !important;
+    width: 100% !important;
+    height: 150px !important;
+    z-index: 999 !important;
+    background: rgba(0,0,0,0.92);
+  }
+  .bottom-panel .log,
+  .bottom-panel .discard-pile {
+    position: relative !important;
+    flex: 1 1 0;
+    width: 50% !important;
+    height: 100% !important;
+    margin: 0 !important;
+    max-width: none !important;
+    font-size: 14px !important;
+    overflow-y: auto !important;
+  }
+  .bottom-panel .log {
+    border-right: 2px solid #444;
+    color: #eee;
+    background: rgba(0,0,0,0.8);
+    line-height: 1.3;
+    white-space: normal;
+    word-break: break-word;
+  }
+  .bottom-panel .discard-pile {
+    border-left: 2px solid #ff4444;
+    background: rgba(0,0,0,0.9);
+    display: flex;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    justify-content: flex-start;
+    gap: 6px;
+  }
+  .bottom-panel .discard-pile .mini-card {
+    width: 28px !important;
+    height: 40px !important;
+    flex: 0 0 auto;
+  }
+
+  /* Make room for bottom panel */
+  .wrap {
+    padding-bottom: 170px !important;
+    padding-top: 10px !important;
+  }
+  .arena {
+    gap: 6px !important;
+    padding: 6px !important;
+    background: rgba(0,0,0,0.15) !important;
+    border-radius: 10px !important;
+    border: 2px solid rgba(255,255,255,0.08) !important;
+    width: 100% !important;
+    max-width: 900px !important;
+    margin: 0 auto !important;
+  }
+  .area {
+    flex-direction: column !important;
+    gap: 6px !important;
+    padding: 6px !important;
+    min-height: 110px !important;
+    background: rgba(0,0,0,0.18) !important;
+    border-radius: 8px !important;
+    border: 2px solid #fff !important;
+    width: 100% !important;
+    margin-bottom: 0 !important;
+  }
+  .slots {
+    gap: 8px !important;
+    flex-wrap: nowrap !important;
+    justify-content: space-between !important;
+    width: 100% !important;
+    overflow-x: auto !important;
+    padding: 0 2px !important;
+  }
+  .slot {
+    width: 70px !important;
+    min-width: 70px !important;
+    height: 105px !important;
+    margin: 0 !important;
+    padding-bottom: 12px !important;
+  }
+  .slot .card {
+    width: 65px !important;
+    height: 92px !important;
+  }
+
+  /* Hand: always inside .area, no overflow, wrap if needed */
+  .hand {
+    display: flex !important;
+    flex-wrap: wrap !important;
+    justify-content: center !important;
+    align-items: flex-end !important;
+    min-height: 70px !important;
+    max-width: 100% !important;
+    width: 100% !important;
+    height: auto !important;
+    margin: 0 !important;
+    padding: 0 !important;
+    position: static !important;
+    overflow: visible !important;
+    z-index: 1 !important;
+    background: none !important;
+  }
+  .hand .card {
+    width: 56px !important;
+    height: 80px !important;
+    margin: 0 3px 0 3px !important;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.18);
+    transition: all 0.2s;
+  }
+  .hand .card.selected {
+    width: 70px !important;
+    height: 100px !important;
+    z-index: 200 !important;
+  }
+
+  /* Action panel: mobile style, always contained */
   .card-action-panel {
     width: 85% !important;
     max-width: 250px !important;
@@ -4597,7 +4719,7 @@ text-shadow: 0 0 20px rgba(255, 68, 68, 0.7);
     transform: translateX(-50%) !important;
     box-sizing: border-box !important;
     position: fixed !important;
-    bottom: 170px !important;
+    bottom: 160px !important;
     top: auto !important;
     right: auto !important;
   }
@@ -4614,34 +4736,26 @@ text-shadow: 0 0 20px rgba(255, 68, 68, 0.7);
     box-sizing: border-box !important;
   }
 
-  /* 2. Hand: no scrollbars, wrap if needed */
-  .hand {
-    overflow: visible !important;
-    flex-wrap: wrap !important;
-    justify-content: center !important;
-    min-height: 80px !important;
+  /* Make containers closer together */
+  .player-info, .hp-bar {
+    min-width: 110px !important;
+    width: 110px !important;
+    height: 16px !important;
+    font-size: 11px !important;
+  }
+  .turn-panel {
+    bottom: 160px !important;
     gap: 8px !important;
-    width: 100% !important;
-    height: auto !important;
+    z-index: 999 !important;
   }
-  .hand .card {
-    width: 60px !important;
-    height: 85px !important;
-    margin: 0 2px !important;
+  .btn {
+    padding: 8px 12px !important;
+    font-size: 11px !important;
   }
-
-  /* 3. Containers closer together */
-  .wrap {
-    padding: 6px !important;
-  }
-  .arena {
-    gap: 6px !important;
-    padding: 6px !important;
-  }
-  .area {
-    gap: 6px !important;
-    padding: 6px !important;
-    min-height: 120px !important;
+  .turn-indicator {
+    top: 10px !important;
+    font-size: 12px !important;
+    padding: 7px 12px !important;
   }
 }
 </style>
