--- a/battle.html
+++ b/battle.html
@@ -4640,8 +4640,8 @@ text-shadow: 0 0 20px rgba(255, 68, 68, 0.7);
     padding-top: 10px !important;
   }
   .arena {
-    gap: 6px !important;
-    padding: 6px !important;
+    gap: 4px !important;
+    padding: 4px !important;
     background: rgba(0,0,0,0.15) !important;
     border-radius: 10px !important;
     border: 2px solid rgba(255,255,255,0.08) !important;
@@ -4651,9 +4651,9 @@ text-shadow: 0 0 20px rgba(255, 68, 68, 0.7);
   }
   .area {
     flex-direction: column !important;
-    gap: 6px !important;
-    padding: 6px !important;
-    min-height: 110px !important;
+    gap: 4px !important;
+    padding: 4px !important;
+    min-height: 90px !important;
     background: rgba(0,0,0,0.18) !important;
     border-radius: 8px !important;
     border: 2px solid #fff !important;
@@ -4661,7 +4661,7 @@ text-shadow: 0 0 20px rgba(255, 68, 68, 0.7);
     margin-bottom: 0 !important;
   }
   .slots {
-    gap: 8px !important;
+    gap: 6px !important;
     flex-wrap: nowrap !important;
     justify-content: space-between !important;
     width: 100% !important;
@@ -4673,7 +4673,7 @@ text-shadow: 0 0 20px rgba(255, 68, 68, 0.7);
     min-width: 70px !important;
     height: 105px !important;
     margin: 0 !important;
-    padding-bottom: 12px !important;
+    padding-bottom: 8px !important;
   }
   .slot .card {
     width: 65px !important;
@@ -4686,7 +4686,7 @@ text-shadow: 0 0 20px rgba(255, 68, 68, 0.7);
     flex-wrap: wrap !important;
     justify-content: center !important;
     align-items: flex-end !important;
-    min-height: 70px !important;
+    min-height: 60px !important;
     max-width: 100% !important;
     width: 100% !important;
     height: auto !important;
@@ -4700,7 +4700,7 @@ text-shadow: 0 0 20px rgba(255, 68, 68, 0.7);
   .hand .card {
     width: 56px !important;
     height: 80px !important;
-    margin: 0 3px 0 3px !important;
+    margin: 0 2px !important;
     box-shadow: 0 2px 6px rgba(0,0,0,0.18);
     transition: all 0.2s;
   }
@@ -4745,7 +4745,7 @@ text-shadow: 0 0 20px rgba(255, 68, 68, 0.7);
   }
   .turn-panel {
     bottom: 160px !important;
-    gap: 8px !important;
+    gap: 6px !important;
     z-index: 999 !important;
   }
   .btn {
