--- a/battle.html
+++ b/battle.html
@@ -4588,54 +4588,18 @@ text-shadow: 0 0 20px rgba(255, 68, 68, 0.7);
   }
 }
 @media (min-width: 769px) and (max-width: 1200px) {
-  /* Bottom panel sits fixed at the bottom, log + graveyard side by side */
   .bottom-panel {
-    display: flex !important;
-    flex-direction: row !important;
-    position: fixed !important;
-    bottom: 0 !important;
-    left: 0 !important;
-    width: 100% !important;
-    height: 160px !important;
-    z-index: 999 !important;
-    background: rgba(0,0,0,0.92);
+    /* unchanged */
   }
   .bottom-panel .log,
   .bottom-panel .discard-pile {
-    position: relative !important;
-    top: auto !important;
-    bottom: auto !important;
-    left: auto !important;
-    right: auto !important;
-    flex: 1 1 0;
-    width: 50% !important;
-    height: 100% !important;
-    margin: 0 !important;
-    max-width: none !important;
-    font-size: 15px !important;
-    overflow-y: auto !important;
+    /* unchanged */
   }
   .bottom-panel .log {
-    border-right: 2px solid #444;
-    color: #eee;
-    background: rgba(0,0,0,0.8);
-    line-height: 1.3;
-    white-space: normal;
-    word-break: break-word;
+    /* unchanged */
   }
   .bottom-panel .discard-pile {
-    border-left: 2px solid #ff4444;
-    background: rgba(0,0,0,0.9);
-    display: flex;
-    flex-wrap: wrap;
-    align-content: flex-start;
-    justify-content: flex-start;
-    gap: 6px;
-  }
-  .bottom-panel .discard-pile .mini-card {
-    width: 28px !important;
-    height: 40px !important;
-    flex: 0 0 auto;
+    /* unchanged */
   }
   .wrap {
     padding-bottom: 180px !important;
@@ -4650,15 +4614,17 @@ text-shadow: 0 0 20px rgba(255, 68, 68, 0.7);
   .arena {
     background: none !important;
     border: none !important;
-    padding: 12px !important;
-    gap: 12px !important;
+    padding: 8px !important;      /* reduced from 12px */
+    gap: 8px !important;          /* reduced from 12px */
     flex: none !important;
+    overflow: visible !important;
   }
   .area {
     flex-direction: column !important;
-    gap: 10px !important;
-    padding: 10px !important;
+    gap: 6px !important;          /* reduced from 10px */
+    padding: 6px !important;      /* reduced from 10px */
     min-height: 160px !important;
+    overflow: visible !important;
   }
   .player-info, .hp-bar {
     min-width: 120px !important;
@@ -4670,8 +4636,9 @@ text-shadow: 0 0 20px rgba(255, 68, 68, 0.7);
     flex-wrap: nowrap !important;
     justify-content: space-between !important;
     width: 100% !important;
-    overflow-x: auto !important;
-    gap: 8px !important;
+    overflow-x: visible !important;   /* prevent scrollbars */
+    overflow-y: visible !important;
+    gap: 6px !important;              /* reduced from 8px */
     padding: 0 2px !important;
   }
   .slot {
@@ -4680,6 +4647,7 @@ text-shadow: 0 0 20px rgba(255, 68, 68, 0.7);
     height: 105px !important;
     margin: 0 !important;
     padding-bottom: 16px !important;
+    overflow: visible !important;
   }
   .slot .card {
     width: 65px !important;
@@ -4690,7 +4658,8 @@ text-shadow: 0 0 20px rgba(255, 68, 68, 0.7);
     gap: 8px !important;
     flex-wrap: nowrap !important;
     justify-content: center !important;
-    overflow-x: auto !important;
+    overflow-x: visible !important;   /* prevent scrollbars */
+    overflow-y: visible !important;
     width: 100% !important;
     position: relative !important;
     z-index: 10 !important;
@@ -4721,6 +4690,7 @@ text-shadow: 0 0 20px rgba(255, 68, 68, 0.7);
     font-size: 13px !important;
     padding: 8px 14px !important;
   }
+  /* --- Action box: use mobile styles --- */
   .card-action-panel {
     width: 85% !important;
     max-width: 250px !important;
@@ -4728,22 +4698,50 @@ text-shadow: 0 0 20px rgba(255, 68, 68, 0.7);
     left: 50% !important;
     transform: translateX(-50%) !important;
     box-sizing: border-box !important;
+    position: fixed !important;
+    bottom: 160px !important;
+    top: auto !important;
+    right: auto !important;
+    background: rgba(0,0,0,0.95) !important;
+    border: 2px solid var(--accent) !important;
+    border-radius: 8px !important;
+    display: flex !important;
+    gap: 10px !important;
+    flex-direction: column !important;
+    min-width: 140px !important;
+    z-index: 100 !important;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.4) !important;
   }
   .card-action-panel .btn {
-    white-space: normal !important;
-    word-break: break-word !important;
+    box-sizing: border-box !important;
+    width: 100% !important;
     padding: 8px 10px !important;
+    margin: 2px 0 !important;
     font-size: 10px !important;
     line-height: 1.3 !important;
-    width: 100% !important;
+    white-space: normal !important;
+    word-break: break-word !important;
     overflow: hidden !important;
     text-overflow: ellipsis !important;
+    background: #fff !important;
+    color: #000 !important;
+    border: 2px solid #000 !important;
+    border-radius: 4px !important;
+    font-family: 'Press Start 2P', monospace !important;
+    cursor: pointer !important;
+    text-align: center !important;
   }
   .card-action-panel .btn.cooldown::after {
     right: -3px !important;
     top: -10px !important;
     font-size: 7px !important;
     padding: 1px 3px !important;
+    background: #ff4444 !important;
+    color: #fff !important;
+    border-radius: 3px !important;
+    position: absolute !important;
+    pointer-events: none !important;
+    content: 'CD: ' attr(data-cooldown);
   }
   .status-icon {
     width: 18px !important;
