--- a/battle.html
+++ b/battle.html
@@ -4686,6 +4686,9 @@ text-shadow: 0 0 20px rgba(255, 68, 68, 0.7);
     height: 92px !important;
   }
   .hand {
+    overflow: visible !important;
+    position: relative !important;
+    z-index: 10 !important;
     min-height: 80px !important;
     gap: 8px !important;
     flex-wrap: nowrap !important;
@@ -4705,7 +4708,7 @@ text-shadow: 0 0 20px rgba(255, 68, 68, 0.7);
   .hand .card.selected {
     width: 75px !important;
     height: 105px !important;
-    z-index: 200 !important;
+    z-index: 999 !important;
   }
   .btn {
     padding: 10px 16px !important;
