--- a/battle.html
+++ b/battle.html
@@ -1080,6 +1080,23 @@ html,body{height:100%;margin:0;font-family:'Press Start 2P','DotGothic16',monosp
   }
 }
 
+@media (min-width: 769px) and (max-width: 1200px) {
+  .slots {
+    gap: 6px !important; /* Reduce gap between card containers */
+  }
+  .hand .card {
+    width: 45px !important;
+    height: 62px !important;
+    transition: all 0.3s ease !important;
+  }
+  .hand .card.selected {
+    width: 60px !important;
+    height: 85px !important;
+    transform: translateY(-8px) scale(1.1) !important;
+    z-index: 200 !important;
+  }
+}
+
 /* Very small screens - even bigger expansion */
 @media (max-width: 480px) {
   .hand .card.touch-expanded {
