--- a/battle.html
+++ b/battle.html
@@ -1113,6 +1113,22 @@ html,body{height:100%;margin:0;font-family:'Press Start 2P','DotGothic16',monosp
     justify-content: center !important;
   }
 }
+@media (min-width: 600px) and (max-width: 1200px) {
+  .hand {
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
+    position: relative !important;
+    width: 100% !important;
+    min-height: 120px !important;
+  }
+  .hand .card {
+    position: absolute !important;
+    left: 50% !important;
+    transform: translateX(-50%) !important;
+    /* If you want to offset each card slightly, use JS or nth-child for left */
+  }
+}
   /* Fix for attack buttons overflowing on mobile */
 @media (max-width: 1200px) {
   /* Card action panel styling improvements */
